now snapping to cardinals (new, quarters, full)
